--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "typescript-tsconfig-paths",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/lib/index.js",
   "author": "William Queiroz <wnqueiroz@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "start": "node dist/lib/index.js",
     "test": "jest",
-    "build": "tsc"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist/lib --copy-files --no-copy-ignored",
+    "postbuild": "tsc -p tsconfig.build.json --emitDeclarationOnly"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.14",
+    "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^26.5.2",
     "ts-jest": "^26.4.1",
     "ts-node-dev": "^1.0.0-pre.63",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
   }
 }
